# rate_limiter_aimd

./: .gitignore  Cargo.toml  README.md
crates/gemini_client/: Cargo.toml
crates/gemini_client/examples/: adaptive_gemini_client.rs
crates/gemini_client/src/: lib.rs
crates/openai_client/: Cargo.toml
crates/openai_client/examples/: adaptive_openai_client.rs
crates/openai_client/src/: lib.rs
crates/rate_limiter_aimd/: Cargo.toml  README.md
crates/rate_limiter_aimd/examples/: edits.md  openai_adaptive_concurrency copy.rs  openai_adaptive_concurrency.rs  openai_chat copy 2.rs  openai_chat copy 3 - compile errors.rs  openai_chat copy 3.rs  openai_chat copy.rs  openai_chat.rs
crates/rate_limiter_aimd/src/: lib.rs
crates/rate_limiter_aimd/src/adaptive_concurrency/: controller.rs  future.rs  layer.rs  mod.rs  reqwest_integration.rs  retries copy.rs  retries.rs  service.rs
crates/rate_limiter_aimd/src/adaptive_concurrency/internal_event/: adaptive_concurrency.rs  mod.rs
crates/rate_limiter_aimd/src/test_utils/: stats.rs
examples/: openai_arc.rs  openai_chat.rs  openai_example.rs
src/: lib.rs
src/adaptive_concurrency/: controller copy.rs  controller.rs  future.rs  http.rs  mod.rs  reqwest_integration.rs  retries.rs  service.rs
src/adaptive_concurrency/internal_event/: adaptive_concurrency.rs  mod.rs
