[package]
name = "openai_client"
version = "0.1.0"
edition = "2024"

[lib]
name = "openai_client"
path = "src/lib.rs"

[dependencies]
rate_limiter_aimd = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tower-test = { workspace = true }
paste = { workspace = true }
serde = { workspace = true }
snafu = { workspace = true }
http = { workspace = true }
serde_json = { workspace = true }
bon = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
tracing-appender = { workspace = true }
bytes = { workspace = true }
